--- a/src/App.css
+++ b/src/App.css
@@ -24,4 +24,17 @@ body::-webkit-scrollbar-thumb{
   background: #c1c1c1;
 }
 
+.bad{
+  border: 1px solid red;
+}
+
+.body-page{
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  left: -.0rem;
+}
+
 
