--- a/src/components/circle percent/circlePercent.css
+++ b/src/components/circle percent/circlePercent.css
@@ -31,6 +31,10 @@
     z-index: 1000;
 }
 
+.percent:nth-child(1){
+    background: #f5641b;
+}
+
 .percent .number{
     position: absolute;
     top: 0;
