--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   position: relative;
   padding: 0;
   margin: 0;
-  left: .05rem;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
@@ -32,6 +31,17 @@ button{
   letter-spacing: .1rem;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+textarea{
+  height: 70px;
+  resize: none;
+}
+
 .bad{
   border: 2px solid #b32121;
 }
@@ -43,7 +53,6 @@ button{
   padding: 0;
   margin: 0;
   display: flex;
-  left: -.0rem;
 }
 
 .page-container{
@@ -56,4 +65,13 @@ button{
   left: -.0rem;
 }
 
+.home,.input,.files{
+  min-height: 100vh;
+  width: 100%;
+  padding: 1rem;
+  background: #202530;
+}
 
+.home-container,.input-container,.files-container{
+  left: -.5rem;
+}
