--- a/src/components/cards-info-percent/cardsInfoPercent.css
+++ b/src/components/cards-info-percent/cardsInfoPercent.css
@@ -34,7 +34,7 @@
 
 .percent-products{
     font-size: 1.4em;
-    margin-top: 3rem;
+    margin-top: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,4 +44,8 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+}
+
+.investment{
+    margin-top: 2rem;
 }
