--- a/src/components/nav-top/navTop.css
+++ b/src/components/nav-top/navTop.css
@@ -39,6 +39,7 @@
 }
 
 .nav-top__user{
+    cursor: pointer;
     font-size: 3em;
     display: flex;
     justify-content: center;
@@ -49,4 +50,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.button-search{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
